// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="mobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="MTS"
  />
  <p>
    Компания: 
    Velcom
  </p>
  <hr />
  <input
    className="button all"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button active"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button blocked"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    rules="rows"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    className="button addButton"
    onClick={[Function]}
    type="button"
    value="Добавить Клиента"
  />
</div>
`;

exports[`Button Add in MobileAddOrEdit should render MobileCompany with new client 1`] = `
<div
  className="mobileCompany"
>
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="Velcom"
  />
  <input
    className="button"
    onClick={[Function]}
    type="button"
    value="MTS"
  />
  <p>
    Компания: 
    Velcom
  </p>
  <hr />
  <input
    className="button all"
    onClick={[Function]}
    type="button"
    value="Все"
  />
  <input
    className="button active"
    onClick={[Function]}
    type="button"
    value="Активные"
  />
  <input
    className="button blocked"
    onClick={[Function]}
    type="button"
    value="Заблокированные"
  />
  <hr />
  <table
    rules="rows"
  >
    <thead>
      <tr>
        <th>
          Фамилия
        </th>
        <th>
          Имя
        </th>
        <th>
          Отчество
        </th>
        <th>
          Баланс
        </th>
        <th>
          Статус
        </th>
        <th>
          Редактировать
        </th>
        <th>
          Удалить
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Иванов
        </td>
        <td>
          Иван
        </td>
        <td>
          Иванович
        </td>
        <td>
          200
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Сидоров
        </td>
        <td>
          Сидор
        </td>
        <td>
          Сидорович
        </td>
        <td>
          250
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Петров
        </td>
        <td>
          Петр
        </td>
        <td>
          Петрович
        </td>
        <td>
          180
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          Григорьев
        </td>
        <td>
          Григорий
        </td>
        <td>
          Григорьевич
        </td>
        <td>
          -220
        </td>
        <td
          className="blocked"
        >
          blocked
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
      <tr>
        <td>
          aaaaaaaaaaa
        </td>
        <td>
          bbbbbbbbbb
        </td>
        <td>
          ccccccccc
        </td>
        <td>
          500
        </td>
        <td
          className="active"
        >
          active
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Редактировать"
          />
        </td>
        <td>
          <input
            className="button"
            onClick={[Function]}
            type="button"
            value="Удалить"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <hr />
  <input
    className="button addButton"
    onClick={[Function]}
    type="button"
    value="Добавить Клиента"
  />
</div>
`;
